# ChatApp

./: .gitignore  CMakeLists.txt
includes/: addcontactdialog.h  chathistorymanager.h  chatmessagedisplay.h  contactmanager.h  databasemanager.h  fileiomanager.h  filetransfermanager.h  formattingtoolbarhandler.h  logindialog.h  mainwindow.h  mainwindowstyle.h  networkeventhandler.h  networkmanager.h  peerinfowidget.h  settingsdialog.h
src/: appicon.rc  chathistorymanager.cpp  chathistorymanager.h  chatmessagedisplay.cpp  chatmessagedisplay.h  contactmanager.cpp  contactmanager.h  logindialog.cpp  logindialog.h  logindialogstyle.cpp  main.cpp  mainwindow.cpp  mainwindow.h  networkeventhandler.cpp  networkeventhandler.h  networkmanager.cpp  networkmanager.h  networkmanager_udp.cpp  peerinfowidget.cpp  resources.qrc  settingsdialog.cpp  settingsdialog.h  setupmainstyle.cpp  styleutils.cpp  styleutils.h
src/DatabaseModule/: databasemanager.cpp
src/FileTransferModule/: fileiomanager.cpp  filetransfermanager.cpp
src/LoginWindow/: logindialog.cpp  logindialogstyle.cpp
src/MainWindow/: addcontactdialog.cpp  chathistorymanager.cpp  chatmessagedisplay.cpp  contactmanager.cpp  formattingtoolbarhandler.cpp  mainwindow.cpp  mainwindowstyle.cpp  setupmainstyle.cpp
src/NetworkModule/: networkeventhandler.cpp  networkmanager.cpp  networkmanager_udp.cpp
src/ResourceImport/: resources.qrc
src/SettingDialog/: settingsdialog.cpp
